--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -31,7 +31,7 @@
   var cor_oc = makeArray(prob_cor, n_trials, max_consec, win_value_cor, loss_value_cor) //'Correct' choice outcomes
   var incor_oc = makeArray(prob_incor, n_trials, max_consec, win_value_incor, loss_value_incor) //'Incorrect' choice outcomes
   var reversal_point = setReversal(rev_interval, rev_diff, rev_num)
-  
+
   // initilisation of variables
   var stimuli = [];
   for (var i = 0; i < n_trials; i++) {
@@ -46,7 +46,7 @@
   var consec_miss = 0;
   var total_miss = 0;
   var cumulative = 0;
-  
+
   // timings
   var max_rt = 2000; //maximum wait time for a keypress (ms)
   var stim_dur = 1000; //time image is highlighted for (ms)
@@ -109,14 +109,14 @@
       if (jsPsych.data.get().last(1).values()[0].resp != null) {
       return "img/" + stimuli[trial_count].left
     } else {
-      return
+      return "img/blank.png"
       }
     },
     stimulusRight: function() {
       if (jsPsych.data.get().last(1).values()[0].resp != null) {
       return "img/" + stimuli[trial_count].right
       } else {
-        return
+        return "img/blank.png"
       }
     },
     choices: [jsPsych.NO_KEYS],
@@ -209,7 +209,7 @@
         return true
       } else {
         return false
-      } 
+      }
     }
   }
 
