--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -70,6 +70,18 @@
             "<p>Please respond as quickly as possible, you will have limited time per trial.</p>" +
             "<p>Press any key to begin 10 practice trials.</p>",
         };
+
+  //***** Define main task instructions *****//
+  
+  // Main task instructions
+  var main_instructions = {
+    type: "html-keyboard-response",
+    stimulus: "<p>You will now begin the main task.</p> " +
+            "<p>Please respond as quickly as possible, as failure to do so will result " +
+            "in your exclusion from further partcipation.</p> " +
+            "<p>Press any key to begin.</p>",
+  };
+
   
   // Display stimuli
   var stimuli_display = {
@@ -218,22 +230,15 @@
       if (trial_count < n_trials_prac) { // Removed attention check for practice trials //
         return true
       } else {
+		// Reset all counters at end of practice trials
+		cumulative = 0
+		total_miss = 0
+		consec_miss = 0
         return false
       }
     }
-  }
-  
-    //***** Define main task instructions *****//
-  
-    // Main task instructions
-  var main_instructions = {
-    type: "html-keyboard-response",
-    stimulus: "<p>You will now begin the main task.</p> " +
-            "<p>Please respond as quickly as possible, as failure to do so will result " +
-            "in your exclusion from further partcipation.</p> " +
-            "<p>Press any key to begin.</p>" +
-          };
-  
+  };
+    
   //***** Define task loop *****//
 
   var prl = [stimuli_display, response_display, outcome_display, cumulative_display]
@@ -246,7 +251,7 @@
         return false
       }
     }
-  }
+  };
 
   //***** Set-up the timeline *****//
   var timeline = []
@@ -255,8 +260,8 @@
     fullscreen_mode: true
   });
   timeline.push(instructions);
-  timeline.push(prac)
-  timeline.push(main_instructions)
+  timeline.push(prac);
+  timeline.push(main_instructions);
   timeline.push(main);
   timeline.push({
     type: 'fullscreen',
