--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -1,3 +1,6 @@
+// Importing "gorilla/gorilla" to allow for hosting the experiment on Gorilla
+import gorilla = require("gorilla/gorilla");
+
 <!DOCTYPE html>
 <html>
 
@@ -13,7 +16,15 @@
 
 <body></body>
 <script>
+
+// Loading the following code to Gorilla
+gorilla.ready(function(){
+	
   //***** Setup task *****//
+  
+  // Set experiment loading 
+  var jsPsych = window['jsPsych'];
+
   // Set task parameters
   var n_trials_prac = 10; //Number of practice trials
   var n_trials = 150; //Number of trials
@@ -31,8 +42,8 @@
   var total_thresh = 0.05; //proportion of total trials that can be missed before being kicked, note this number will be rounded up and inclusive
   var cor_oc = makeArray(prob_cor, n_trials, max_consec, win_value_cor, loss_value_cor) //'Correct' choice outcomes
   var incor_oc = makeArray(prob_incor, n_trials, max_consec, win_value_incor, loss_value_incor) //'Incorrect' choice outcomes
-  var reversal_point = setReversal(rev_interval, rev_diff, rev_num)
-
+  var reversal_point = setReversal(rev_interval, rev_diff, rev_num);
+	
   // initilisation of variables
   var stimuli = [];
   for (var i = 0; i < n_trials; i++) {
@@ -284,6 +295,7 @@
       //jsPsych.data.displayData(); // this is suppressed for now because it interferes with the end experiment error message
     }
   });
+}
 </script>
 
 </html>
