--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -94,8 +94,8 @@ gorilla.ready(function(){
   var main_instructions = {
     type: "html-keyboard-response",
     stimulus: "<p>You will now begin the main task.</p> " +
-            "<p>Please respond as quickly as possible, as failure to do so will result " +
-            "in your exclusion from further partcipation.</p> " +
+            "<p>Please note that you must answer quickly, with multiple missed trials " +
+            "meaning you will not be able to participate further.</p> " +
             "<p>Press any key to begin.</p>",
   };
 
