--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -123,8 +123,10 @@ gorilla.ready(function(){
     on_finish: function(data) {
       if (data.key_press == 39) {
         data.resp = "right"
+	gorilla.resp = "right"
       } else if (data.key_press == 37) {
         data.resp = "left"
+	gorilla.resp = "left"
       } else {
         data.resp = null
         consec_miss++
@@ -137,7 +139,9 @@ gorilla.ready(function(){
         data.choice = null
       }
       data.cor = data.choice == "fractal" + cor_choice + ".jpg"
+      gorilla.cor = gorilla.choice == "fractal" + cor_choice + ".jpg"
       data.cor_im = "fractal" + cor_choice + ".jpg"
+      gorilla.cor_im = "fractal" + cor_choice + ".jpg"
     }
   };
 
