Added Current trial number (curr_trial) to data

--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -139,6 +139,8 @@ gorilla.ready(function(){
       gorilla.cor = gorilla.choice == "fractal" + cor_choice + ".jpg"
       data.cor_im = "fractal" + cor_choice + ".jpg"
       gorilla.cor_im = "fractal" + cor_choice + ".jpg"
+	  data.curr_trial = trial_count
+	  gorilla.curr_trial = trial_count
     }
   };
 
