Reset trial counter at end of practice block

--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -275,6 +275,7 @@ gorilla.ready(function(){
 		cumulative = 0
 		total_miss = 0
 		consec_miss = 0
+		trial_count = 0
         return false
       }
     }
