--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -139,6 +139,9 @@ gorilla.ready(function(){
       gorilla.cor = gorilla.choice == "fractal" + cor_choice + ".jpg"
       data.cor_im = "fractal" + cor_choice + ".jpg"
       gorilla.cor_im = "fractal" + cor_choice + ".jpg"
+      // Additional data recorded - Reversal point
+      data.reversal_point = reversal_point.includes(trial_count) == true
+      gorilla.reversal_point = reversal_point.includes(trial_count) == true
     }
   };
 
@@ -276,6 +279,10 @@ gorilla.ready(function(){
         return false
       }
     }
+    // Adding additional tags to the data
+    data: {
+      task: "practice"
+      }	   
   };
 
   //***** Define main task loop *****//
@@ -289,6 +296,9 @@ gorilla.ready(function(){
       } else {
         return false
       }
+    // Adding additional tags to the data
+    data: {
+      task: "main"
     }
   };
 
