--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -46,10 +46,7 @@ gorilla.ready(function(){
   var reversal_point = setReversal(rev_interval, rev_diff, rev_num);
 
   // initilisation of variables
-  var stimuli = [];
-  for (var i = 0; i < n_trials; i++) {
-    stimuli.push(imageShuffle())
-  }
+  var stimuli = makeImList(n_trials, 6);
   var correctCount = 0;
   var incorrectCount = 0;
   var score = 0;
