--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -7,6 +7,7 @@
   <script src="jspsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
   <script src="jspsych-6.1.0/plugins/jspsych-2image-keyboard-response.js"></script>
   <script src="jspsych-6.1.0/plugins/jspsych-fullscreen.js"></script>
+  <script src="jspsych-6.1.0/plugins/jspsych-instructions.js"></script>
   <script src="extra_js/functions.js"></script>
   <link href="jspsych-6.1.0/css/jspsych.css" rel="stylesheet" type="text/css"></link>
 </head>
@@ -25,6 +26,7 @@ gorilla.ready(function(){
   images.push(gorilla.stimuliURL('blank.png'));
   images.push(gorilla.stimuliURL('fractal1.jpg'));
   images.push(gorilla.stimuliURL('fractal2.jpg'));
+  images.push(gorilla.stimuliURL('both_fractals.jpg'));
 
   // Set task parameters
   var n_trials_prac = 10; //Number of practice trials
@@ -71,28 +73,62 @@ gorilla.ready(function(){
 
   // Task instructions - Before practice task
   var instructions = {
-    type: "html-keyboard-response",
-    stimulus: "<p>In this experiment, you will see abstract images " +
-            "appear on the screen.</p><p>You must " +
-            "choose only <strong>1</strong> of the 2 images displayed on the screen during each " +
-            "trial.</p><p>You will earn points based on your choices.</p><p>Your goal is to " +
-            "accumulate as many points as possible by the end of the trials.</p><p>If you " +
-            "choose the image on the <strong>left</strong> side of the screen, press the <strong>'Left Arrow'</strong> " +
-            "key on the keyboard.</p><p>If you choose the image on the <strong>right</strong> side of the " +
-            "screen, press the <strong>'Right Arrow'</strong> key on the keyboard.</p>" +
-            "<p>Please respond as quickly as possible, you will have limited time per trial.</p>" +
-            "<p>Press any key to begin 10 practice trials.</p>",
-        };
+    type: "instructions",
+    pages: [
+      'Welcome to the experiement. Click next to begin.',
+      'This experiment consists of two parts. In the first part you will complete a computerised task. In the second part you will complete a questionnaire.',
+      'In the first part of the experiment you will be completing a task where your aim is to collect as many points as possible. If you collect enough points then you will receive a bonus cash payment for your performance.',
+      'You can collect points in the following way:',
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be shown these two images, and you will need to select one of these images.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> These images will randomly appear on either the left or right hand side of the screen.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Use the <strong>left arrow key</strong> to select the image that appears on the left hand side, or the <strong>right arrow key</strong> to select the image on the right hand side.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> For each trial you will either <strong>gain or lose a point</strong> and whether you gain or lose a point is <strong>dependent on the image that you select</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> At the start of the task <strong>one image will be randomly selected to give out points more frequently than the other</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To collect as many points as possible you will need to <strong>learn which image gives out points most frequently</strong> when chosen.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> During the task <strong>the image that gives out points most frequently will change<,strong>, however you will not be told when this will occur.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Therefore, you will need to make sure you pay attention to the outcomes of your choices to make sure you are <strong>collecting as many points as possible</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be given two seconds to select either of the images using the arrow keys. If you do not select an image within two seconds then you will lose a point.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> If you do not select an image for five consecutive trials, or nine trials in total, then your participation in the study will be ended and you will not receive any payment.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then your participation in this study will also be ended and you will not received any payment.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To get you used to the task, you will complete ten practice trials before starting the main task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Choices on practice trials are not rewarded with points, and have no influence on the main task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Instead of seeing points during practice trials you will see #####, which is being used as a placeholder.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> You will be told when you have completed the practice trials and when you are starting the main part of the task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Remember, <strong>you could receive a bonus payment based on the number of points you collect</strong> during the main part of the task.`,
+      'If you are ready to start the practice trials, please press Next. If you would like to review any instructions, please press Previous'
+    ],
+    show_clickable_nav: true,
+    allow_keys: false
+    };
 
   //***** Define main task instructions *****//
 
   // Main task instructions
   var main_instructions = {
-    type: "html-keyboard-response",
-    stimulus: "<p>You will now begin the main task.</p> " +
-            "<p>Please note that you must answer quickly, with multiple missed trials " +
-            "meaning you will not be able to participate further.</p> " +
-            "<p>Press any key to begin.</p>",
+    type: "instructions",
+    pages: [
+      'Practice complete. Please press next to review the instructions and start the main part of the task.',
+      'Rememeber, in this task your aim is to collect as many points as possible. If you collect enough points then you will receive a bonus cash payment for your performance.',
+      'You can collect points in the following way:',
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be shown these two images, and you will need to select one of these images.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> These images will randomly appear on either the left or right hand side of the screen.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Use the <strong>left arrow key</strong> to select the image that appears on the left hand side, or the <strong>right arrow key</strong> to select the image on the right hand side.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> For each trial you will either <strong>gain or lose a point</strong> and whether you gain or lose a point is <strong>dependent on the image that you select</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> At the start of the task <strong>one image will be randomly selected to give out points more frequently than the other</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To collect as many points as possible you will need to <strong>learn which image gives out points most frequently</strong> when chosen.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> During the task <strong>the image that gives out points most frequently will change<,strong>, however you will not be told when this will occur.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Therefore, you will need to make sure you pay attention to the outcomes of your choices to make sure you are <strong>collecting as many points as possible</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be given two seconds to select either of the images using the arrow keys. If you do not select an image within two seconds then you will lose a point.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> If you do not select an image for five consecutive trials, or nine trials in total, then your participation in the study will be ended and you will not receive any payment.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then your participation in this study will also be ended and you will not received any payment.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To get you used to the task, you will complete ten practice trials before starting the main task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> After making choices on practice trials you saw #####, however, in the main part of the task you will see points, and the total number of points you have gained or lost so far.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, choices made during practice trials will have no bearing on outcomes in the main task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Remember, <strong>you could receive a bonus payment based on the number of points you collect</strong> during the main part of the task.`,
+      'If you are ready to start the main part of the task, please press Next. If you would like to review any instructions, please press Previous'
+    ],
+    show_clickable_nav: true,
+    allow_keys: false
   };
 
 
