--- a/PRL_reliability.html
+++ b/PRL_reliability.html
@@ -77,23 +77,23 @@ gorilla.ready(function(){
       'This experiment consists of two parts. In the first part you will complete a computerised task. In the second part you will complete a questionnaire.',
       'In the first part of the experiment you will be completing a task where your aim is to collect as many points as possible. If you collect enough points then you will receive a bonus cash payment for your performance.',
       'You can collect points in the following way:',
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be shown these two images, and you will need to select one of these images.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be shown these two images, and you will need to <strong>select one of these images</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> These images will randomly appear on either the left or right hand side of the screen.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Use the <strong>left arrow key</strong> to select the image that appears on the left hand side, or the <strong>right arrow key</strong> to select the image on the right hand side.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> For each trial you will either <strong>gain or lose a point</strong> and whether you gain or lose a point is <strong>dependent on the image that you select</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> At the start of the task <strong>one image will be randomly selected to give out points more frequently than the other</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To collect as many points as possible you will need to <strong>learn which image gives out points most frequently</strong> when chosen.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> During the task <strong>the image that gives out points most frequently will change<,strong>, however you will not be told when this will occur.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> During the task <strong>the image that gives out points most frequently will change</strong>, however you will not be told when this will occur.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Therefore, you will need to make sure you pay attention to the outcomes of your choices to make sure you are <strong>collecting as many points as possible</strong>.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be given two seconds to select either of the images using the arrow keys. If you do not select an image within two seconds then you will lose a point.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> If you do not select an image for five consecutive trials, or nine trials in total, then your participation in the study will be ended and you will not receive any payment.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then your participation in this study will also be ended and you will not received any payment.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be given <strong>two seconds</strong> to select either of the images using the arrow keys. If you do not select an image within two seconds then you will lose a point.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> If you do not select an image for five consecutive trials, or nine trials in total, then <strong>your participation in the study will be ended and you will not receive any payment</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then <strong>your participation in this study will also be ended and you will not received any payment</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To get you used to the task, you will complete ten practice trials before starting the main task.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Choices on practice trials are not rewarded with points, and have no influence on the main task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Choices on <strong>practice trials are not rewarded</strong> with points, and <strong>have no influence on the main task</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Instead of seeing points during practice trials you will see #####, which is being used as a placeholder.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> You will be told when you have completed the practice trials and when you are starting the main part of the task.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Remember, <strong>you could receive a bonus payment based on the number of points you collect</strong> during the main part of the task.`,
-      'If you are ready to start the practice trials, please press Next. If you would like to review any instructions, please press Previous'
+      'If you are ready to start the practice trials, please press <strong>Next</strong>. If you would like to review any instructions, please press <strong>Previous</strong>'
     ],
     show_clickable_nav: true,
     allow_keys: false
@@ -108,22 +108,21 @@ gorilla.ready(function(){
       'Practice complete. Please press next to review the instructions and start the main part of the task.',
       'Rememeber, in this task your aim is to collect as many points as possible. If you collect enough points then you will receive a bonus cash payment for your performance.',
       'You can collect points in the following way:',
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be shown these two images, and you will need to select one of these images.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be shown these two images, and you will need to <strong>select one of these images</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> These images will randomly appear on either the left or right hand side of the screen.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Use the <strong>left arrow key</strong> to select the image that appears on the left hand side, or the <strong>right arrow key</strong> to select the image on the right hand side.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> For each trial you will either <strong>gain or lose a point</strong> and whether you gain or lose a point is <strong>dependent on the image that you select</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> At the start of the task <strong>one image will be randomly selected to give out points more frequently than the other</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To collect as many points as possible you will need to <strong>learn which image gives out points most frequently</strong> when chosen.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> During the task <strong>the image that gives out points most frequently will change<,strong>, however you will not be told when this will occur.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> During the task <strong>the image that gives out points most frequently will change</strong>, however you will not be told when this will occur.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Therefore, you will need to make sure you pay attention to the outcomes of your choices to make sure you are <strong>collecting as many points as possible</strong>.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be given two seconds to select either of the images using the arrow keys. If you do not select an image within two seconds then you will lose a point.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> If you do not select an image for five consecutive trials, or nine trials in total, then your participation in the study will be ended and you will not receive any payment.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then your participation in this study will also be ended and you will not received any payment.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> To get you used to the task, you will complete ten practice trials before starting the main task.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> After making choices on practice trials you saw #####, however, in the main part of the task you will see points, and the total number of points you have gained or lost so far.`,
-      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, choices made during practice trials will have no bearing on outcomes in the main task.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> On each trial you will be given <strong>two seconds</strong> to select either of the images using the arrow keys. If you do not select an image within two seconds then you will lose a point.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> If you do not select an image for five consecutive trials, or nine trials in total, then <strong>your participation in the study will be ended and you will not receive any payment</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, this experiment is required to run in full screen mode. If you exit full screen mode or tab away from this window during the main task then <strong>your participation in this study will also be ended and you will not received any payment</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> After making choices on practice trials you saw #####, however, in the main part of the task <strong>you will see points, and the total number of points you have gained or lost so far</strong>.`,
+      `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Additionally, choices made during practice trials will have <strong>no bearing on outcomes in the main task</strong>.`,
       `<img src="${gorilla.stimuliURL('both_fractals.jpg')}"></img> Remember, <strong>you could receive a bonus payment based on the number of points you collect</strong> during the main part of the task.`,
-      'If you are ready to start the main part of the task, please press Next. If you would like to review any instructions, please press Previous'
+      'If you are ready to start the main part of the task, please press <strong>Next</strong>. If you would like to review any instructions, please press <strong>Previous</strong>'
     ],
     show_clickable_nav: true,
     allow_keys: false
@@ -303,19 +302,17 @@ gorilla.ready(function(){
 
    //***** Define main task performance feedback *****//
  
-   var performance_display = {
-   type: 'html-keyboard-response',
-   prompt: 'You responded correctly on this percentage of trials - You have earned the performance bonus!',
-   stimulus: function() {
-     var feedback_num_array = [50, 60, 65, 70, 75, 80]
-     var feedback = jsPsych.randomization.sampleWithoutReplacement(feedback_num_array, 1)
-       }
-     }
-     return feedback
-   },
-  choices: [jsPsych.NO_KEYS],
-  trial_duration: fb_dur      
-};
+  var performance_display = {
+    type: 'html-keyboard-response',
+    prompt: 'You responded correctly on this percentage of trials - You have earned the performance bonus!',
+    stimulus: function() {
+      var feedback_num_array = [50, 60, 65, 70, 75, 80]
+      var feedback = jsPsych.randomization.sampleWithoutReplacement(feedback_num_array, 1)
+      return feedback
+    },
+    choices: [jsPsych.NO_KEYS],
+    trial_duration: fb_dur      
+  };
 	
   //***** Define practice task loop *****//
 
